# tauri-sys

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  renovate.json5  typos.toml
.github/: FUNDING.yml
.github/workflows/: rustdoc.yml  spelling.yml  test.yml
examples/api/: Cargo.toml  Trunk.toml  index.html
examples/api/shared/: Cargo.toml
examples/api/shared/src/: lib.rs
examples/api/src/: main.rs
examples/api/src-tauri/: Cargo.toml  tauri.conf.json
examples/api/src-tauri/src/: main.rs
examples/api/src/views/: app.rs  clipboard.rs  communication.rs  mod.rs  updater.rs  welcome.rs  window.rs
examples/leptos/: Cargo.toml  Trunk.toml
examples/leptos/src/: app.rs  main.rs
examples/leptos/src-tauri/: Cargo.toml  tauri.conf.json
examples/leptos/src-tauri/capabilities/: default.json
examples/leptos/src-tauri/src/: main.rs
examples/test/: Cargo.toml  Trunk.toml  index.html
examples/test/src/: app.rs  clipboard.rs  dialog.rs  event.rs  global_shortcut.rs  main.rs  notification.rs  os.rs  tauri_log.rs  window.rs
examples/test/src-tauri/: Cargo.toml  tauri.conf.json
examples/test/src-tauri/capabilities/: default.json
examples/test/src-tauri/src/: main.rs
src/: app.js  app.rs  cli.js  clipboard.js  clipboard.rs  core.js  core.rs  dialog.js  dialog.rs  dpi.rs  error.rs  event.js  event.rs  fs.js  fs.rs  globalShortcut.js  global_shortcut.rs  http.js  index.js  lib.rs  menu.rs  mocks.js  mocks.rs  notification.js  notification.rs  os.js  os.rs  path.js  path.rs  positioner.js  positioner.rs  process.js  process.rs  shell.rs  store.js  store.rs  tauri.js  tauri.rs  updater.js  updater.rs  (+2 more)
tests/: web.rs
