[package]
edition = "2021"
name = "tauri-sys"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", optional = true }
js-sys = "0.3.69"
log = "0.4.21"
serde = {version = "1.0.203", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.19"
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
tauri-sys = {path = ".", features = ["all"]}
wasm-bindgen-test = "0.3.42"

[package.metadata.docs.rs]
all-features = true

[features]
all = ["core", "dpi", "event", "window"]
core = []
dpi = []
event = ["dep:futures"]
window = ["dpi", "event"]

[workspace]
members = ["examples/test", "examples/test/src-tauri"]
