[package]
edition = "2024"
name = "tauri-sys"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "from"] }
futures = { version = "0.3.30", optional = true }
js-sys = "0.3.69"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_repr = "0.1.19"
thiserror = "2.0.12"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[dev-dependencies]
tauri-sys = { path = ".", features = ["all"] }
wasm-bindgen-test = "0.3.50"

[package.metadata.docs.rs]
all-features = true

[features]
all = ["app", "core", "dpi", "event", "menu", "window"]
app = ["core"]
core = []
dpi = []
event = ["dep:futures"]
menu = ["core", "window"]
window = ["dpi", "event"]

[workspace]
members = ["examples/leptos", "examples/leptos/src-tauri"]
