[package]
name = "tauri-sys-test-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tauri-sys = { path = "../../", features = ["all"] }
sycamore = { git = "http://github.com/zakpatterson/sycamore", rev="3885435034994c126f7b073f4cf53d4842ce42c9", features = ["suspense", "trace", "ssr"] }
anyhow = "1.0.66"
console_error_panic_hook = "0.1.7"
wasm-bindgen = {version = "0.2.83", features = ["serde_json"]}
wasm-bindgen-futures = "0.4.32"
serde = { version = "1.0.147", features = ["derive"] }
log = { version = "0.4.17", features = ["serde"] }
futures = "0.3.25"
gloo-timers = { version = "0.2.4", features = ["futures"] }

[features]
ci = []
